Right-align solve button

--- a/src/holesPanel/webview/holes.css
+++ b/src/holesPanel/webview/holes.css
@@ -64,6 +64,7 @@ pre {
 
 .hole-id {
   font-family: var(--font-mono);
+  flex: 1;
 }
 
 .hole-field {
